--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,24 @@ img:hover {
   cursor: pointer
 }
 
+.searchResultsContainer {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.searchresult {
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+}
+
+button {
+  display: block;
+  margin: 0 45%;
+
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
