--- a/src/App.css
+++ b/src/App.css
@@ -24,19 +24,9 @@
 }
 
 
-.movieContainer {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  text-align: center;
-  margin: 0 auto
-}
 
-.movie {
-  margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-}
+
+
 
 button {
   margin: 2% 20%
@@ -48,6 +38,10 @@ Link:hover {
 
 .movieTitles {
   color: darkblue
+}
+
+.cssCard {
+  max-width: 540px
 }
 
 @keyframes App-logo-spin {
