added buttons to show page

--- a/src/App.css
+++ b/src/App.css
@@ -44,6 +44,10 @@ Link:hover {
   max-width: 540px
 }
 
+.synopsis {
+  font-size: 0.7em
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
